<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/background_login"
android:orientation="vertical"
android:paddingBottom="16dp"
android:paddingLeft="18dp"
android:paddingRight="18dp"
android:paddingTop="16dp"
tools:context="LoginActivity">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingTop="110dp"
        android:paddingBottom="20dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:contentDescription="@string/drive_safe"
            app:srcCompat="@drawable/logodrivesafe" />

        <EditText
            android:id="@+id/etLogGmail"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="50dp"
            android:autofillHints=""
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/round_email_white_18dp"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="8dp"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:paddingRight="8dp"
            android:paddingBottom="8dp"
            android:textColorHint="#3F51B5" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#f9d7db" />

        <EditText
            android:id="@+id/etLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/ic_lock_white_24dp"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:paddingRight="8dp"

            android:paddingBottom="8dp"
            android:textColorHint="#3F51B5" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#f9d7db" />

        <Button
            android:id="@+id/btnLogin"
            style="@style/Base.TextAppearance.AppCompat.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/background_login"
            android:clickable="true"
            android:padding="16dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="#F4F4F4"
            android:textSize="18sp"
            android:textStyle="normal|bold" />

        <Button
            android:id="@+id/tvRegister"
            style="@style/Base.TextAppearance.AppCompat.Body1"
            android:layout_width="216dp"
            android:layout_height="86dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/background_login"
            android:clickable="true"
            android:paddingTop="10dp"
            android:text="@string/new_user_register"
            android:textAllCaps="false"
            android:textColor="#F4F4F4"
            android:textSize="18sp"
            android:textStyle="normal|bold" />

    </LinearLayout>
</ScrollView>
</LinearLayout>