<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Balance"
    android:orientation="vertical"
    android:background="@drawable/background_login">

    <TextView
        android:id="@+id/textView"
        android:layout_width="209dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="250dp"
        android:layout_marginBottom="12dp"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="#3F51B5"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Balance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:paddingTop="30dp"
        android:paddingBottom="10dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/topupAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:background="@drawable/background_login"
        android:gravity="center"
        android:hint="@string/enter_amount"
        android:inputType="number"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/AddMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="120dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/background_login"
        android:insetTop="10dp"
        android:insetBottom="10dp"
        android:text="@string/add_money"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />
</LinearLayout>